Match-id-f467ca943b321a060c45906efe785f1ab81f0027

--- a/mindx-dl/deploy/yamls/hccl-controller-v20.2.0.yaml
+++ b/mindx-dl/deploy/yamls/hccl-controller-v20.2.0.yaml
@@ -14,9 +14,10 @@ spec:
     spec:
       nodeSelector:
         masterselector: dls-master-node
+      serviceAccountName: hccl-controller
       containers:
       - name: hccl-controller
-        image: hccl-controller:v20.1.0
+        image: hccl-controller:v20.2.0
         resources:
           requests:
               memory: 300Mi
@@ -31,12 +32,17 @@ spec:
         volumeMounts:
           - name: device-hcclcontroller
             mountPath: /var/log/atlas_dls/hccl-controller
+          - name: timezone
+            mountPath: /etc/timezone
           - name: localtime
             mountPath: /etc/localtime
       volumes:
         - name: device-hcclcontroller
           hostPath:
             path: /var/log/atlas_dls/hccl-controller
+        - name: timezone
+          hostPath:
+            path: /etc/timezone
         - name: localtime
           hostPath:
             path: /etc/localtime
